syntax = "proto3";

package agent;

service AIService {
  rpc AskAgent (AgentRequest) returns (AgentResponse);
}

message AgentRequest {
  string query = 1;
}

message AgentResponse {
  string answer = 1;
}
